kitty and nvim updates

--- a/.config/kitty/kitty.conf
+++ b/.config/kitty/kitty.conf
@@ -1220,6 +1220,7 @@ background_opacity 0.85
 #: Window management {{{
 
 # map kitty_mod+enter new_window
+map kitty_mod+enter launch --cwd=current
 
 #: You can open a new window running an arbitrary program, for
 #: example::
